# slumberland

./: .gitignore  Cargo.toml  Dioxus.toml  README.org  build.rs
assets/: main.css  main_pre.css
memories/: Cargo.toml
memories/src/: lib.rs
src/: main.rs
zz/: Cargo.toml
zz/src/: cell.rs  dimension.rs  lib.rs  topology.rs
