[package]
name = "slumberland"
version = "0.1.1"
edition = "2024"
authors = ["Raymond Finzel <rfinz.me@rfinz.me>"]

[dependencies]
zz = { path = "zz" }
memories = { path = "memories" }
#rhai = "1.21.0"
#rhai-ml = "0.1.2"
dioxus = { version = "0.6.0", features = [] }
tracing = "0.1.41"

[build-dependencies]
lightningcss = { version = "1.0.0-alpha.65", features = ["visitor"] }
cssparser = "0.33.0"
cssparser-color = "0.1.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[workspace]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
